fix(header): fix header overlay under submit overlay visibility

--- a/src/entities/Report/ui/ReportNavigationTemplate/ReportNavigationTemplate.module.css
+++ b/src/entities/Report/ui/ReportNavigationTemplate/ReportNavigationTemplate.module.css
@@ -12,7 +12,7 @@
 .wrapper {
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 199;
   margin: 0 auto;
   background-color: var(--mantine-color-white);
 }
