--- a/src/features/Rephrasing/Rephrasing.module.css
+++ b/src/features/Rephrasing/Rephrasing.module.css
@@ -1,5 +1,7 @@
 .root {
   @mixin larger-than 768px {
-    top: 38px;
+    &:has(+ div > button:not([hidden])) {
+      top: 37px;
+    }
   }
 }
