--- a/src/widgets/RootLayout/ui/Header/Header.module.css
+++ b/src/widgets/RootLayout/ui/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  z-index: 1100;
+  z-index: 200;
   margin-bottom: var(--mantine-spacing-xs);
   border-bottom: 1px solid var(--mantine-color-gray-3);
   width: 100%;
